fixes to make visible the bottom side of the list

--- a/static/styles/jsdoc-default.css
+++ b/static/styles/jsdoc-default.css
@@ -143,8 +143,8 @@ nav {
   width: 250px;
   overflow: auto;
   position: fixed;
-  height: 100%;
-  margin-top: 10px;
+  padding-bottom: 30px;
+  height: calc(100% - 30px);
 }
 
 nav h3 {
